<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="3dip"
        android:paddingRight="3dip">

        <TextView
            android:id="@+id/txtTypeBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/init_board_intro" />

        <EditText
            android:id="@+id/edittxtBoard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/example_board"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="5dp" />

        <TextView
            android:id="@+id/txtCosts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_costs_intro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCostHalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cost_0_5" />

            <EditText
                android:id="@+id/edittxtHalf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|textPersonName"
                android:text="@string/_1_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCost2"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cost_2" />

            <EditText
                android:id="@+id/edittxtCost2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text|textPersonName"
                android:text="@string/_3_4" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtChooseAlg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_choose_the_algorithm_to_use" />

        <TextView
            android:id="@+id/txtHeurtistic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heuristic_desc" />

        <RadioGroup
            android:id="@+id/radioGroupAlgs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radBfs"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radBfs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bfs" />

            <RadioButton
                android:id="@+id/radioDfid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dfid" />

            <RadioButton
                android:id="@+id/radioAstart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a_star" />

            <RadioButton
                android:id="@+id/radioIdaStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ida_star" />

            <RadioButton
                android:id="@+id/radioDfbnb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dfbnb" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="runBtnClick"
                android:text="@string/run" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtOutput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/output" />

        <EditText
            android:id="@+id/edittxtOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtGitLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_repository" />
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>